[package]
name = "debug-traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = { version = "0.5.6", default-features = false }
usb-device = { version = "0.2.8", features = ["control-buffer-256"] }
usbd-serial = "0.1.1"
embedded-hal = "0.2.7"
fugit = "0.3.3"

[dependencies.defmt]
optional = true
version = ">=0.2.3,<0.4.0"

[features]
usb-hs = []
