[package]
name = "dap-rs"
version = "0.2.0"
edition = "2021"
authors = ["Emil Fresk <emil.fresk@gmail.com>", "Adam Greig <adam@adamgreig.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = { version = "0.5.6", default-features = false }
usb-device = { version = "0.2.8", features = ["control-buffer-256"] }
embedded-hal = "0.2.7"
replace_with = { version = "0.1.7", default-features = false, features = ["panic_abort"] }
bitflags = "1.3.2"
mockall = "0.13.0"

[dependencies.defmt]
optional = true
version = ">=0.2.3,<0.4.0"

[features]
usb-hs = []
