[package]
name = "dap-rs"
version = "0.1.0"
edition = "2021"
authors = [
    "Emil Fresk <emil.fresk@gmail.com>",
    "Adam Greig <adam@adamgreig.com>",
]
description = "Helper library for creating SWD/JTAG debug probes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/probe-rs/dap-rs"
documentation = "https://docs.rs/dap-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = { version = "0.5.6", default-features = false }
usb-device = { version = "0.3.1", features = ["control-buffer-256"] }
embedded-hal = "1.0.0"
replace_with = { version = "0.1.7", default-features = false, features = ["panic_abort"] }
bitflags = "1.3.2"

[dependencies.defmt]
optional = true
version = "0.3"

[features]
defmt = ["dep:defmt"]
usb-hs = []
